--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -15,22 +15,21 @@ html
 
     nav.navigation-menu
       a Remoto
-      a.link 800-736-6860
       a.link href="#pricing" Pricing
       a.link href="#product" Product
 
     header.section-hero
       h1 Keep your team close  and your clients closer
       h4 Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
-      a.button Start Free
+      a.button href="http://beta.remoto.me" target="_blank" Start Free
 
-    .cta-page
-      .container
-        h1 We are almost there...
-        p Keep in mind we are still on “alpha” phase, so there may be some bugs and inconveniences.
-        a.button href="http://alpha.remoto.me/auth/sign-up" Be Brave
-        a.button.-cancel No, Thanks
-        #close-cta Close
+    / .cta-page
+    /   .container
+    /     h1 We are almost there...
+    /     p Keep in mind we are still on “alpha” phase, so there may be some bugs and inconveniences.
+    /     a.button href="http://beta.remoto.me/auth/sign-up" Be Brave
+    /     a.button.-cancel No, Thanks
+    /     #close-cta Close
 
     section#product.section-features
       .feature
@@ -50,27 +49,27 @@ html
           h2.name Free
           h3.price $0
           p.note Yeeah! 🎉
-          a.button.-small Start Free
+          a.button.-small href="http://beta.remoto.me" target="_blank" Start Free
           ul.features
             li Free Intra-company calls worldwide
             li 1 month message storage
             li Unlimited groups
-        .plan
+        .plan.-soon
           h2.name Professional
           h3.price $20
           p.note per active user, per month
-          a.button.-small Buy Professional
+          a.button.-small Available Soon…
           ul.features
             li All features from Free plan
             li 1 year message storage
             li Toll free number
             li Unlimited inbound calls*
             li Outbound calls**
-        .plan
+        .plan.-soon
           h2.name Enterprise
           h3.price $50
           p.note per active user, per month
-          a.button.-small Buy Enterprise
+          a.button.-small Available Soon…
           ul.features
             li All features from Professional plan
             li Unlimited message storage
@@ -96,29 +95,29 @@ html
         p Remoto is more than work tool, it is a way of thinking about work. Think outside the cubicle, be Remoto.
         p Yours,
         p.signature Fred Guth, Founder & CEO
-        p P.S.  If you want to talk, just reach me at <a href="http://alpha.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
-      .button Start Free
+        / p P.S.  If you want to talk, just reach me at <a href="http://beta.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
+      a.button href="http://beta.remoto.me" target="_blank" Start Free
 
-    footer.section-footer
-      .column
-        a Remoto
-        a Blog
-        a Facebook
-        a Linkedin
-      .column
-        h4 Remoto
-        a Features
-        a Pricing
-      .column
-        h4 Download
-        a Desktop App
-        a Mobile App
-      .column
-        h4 Support
-        a 800-736-6860
-        a hi@remoto.me
-        a href="terms-of-service.html" target="_blank" Terms of Service
-        a href="terms-of-service.html" target="_blank" Privacy
+    / footer.section-footer
+    /   .column
+    /     a Remoto
+    /     a Blog
+    /     a Facebook
+    /     a Linkedin
+    /   .column
+    /     h4 Remoto
+    /     a Features
+    /     a Pricing
+    /   .column
+    /     h4 Download
+    /     a Desktop App
+    /     a Mobile App
+    /   .column
+    /     h4 Support
+    /     a 800-736-6860
+    /     a hi@remoto.me
+    /     a href="terms-of-service.html" target="_blank" Terms of Service
+    /     a href="terms-of-service.html" target="_blank" Privacy
 
 
     script src="js/scripts.js"
