action should be signup

--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -49,7 +49,7 @@ html
           h2.name Free
           h3.price $0
           p.note Yeeah! 🎉
-          a.button.-small href="http://beta.remoto.me" target="_blank" Start Free
+          a.button.-small href="http://beta.remoto.me/auth/sign-up" target="_blank" Start Free
           ul.features
             li Free Intra-company calls worldwide
             li 1 month message storage
