added Sign-in link

--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -15,8 +15,10 @@ html
 
     nav.navigation-menu
       a Remoto
+      a.link href="http://beta.remoto.me/auth/sign-in" target="_blank" Sign-in
       a.link href="#pricing" Pricing
       a.link href="#product" Product
+
 
     header.section-hero
       h1 Keep your team close  and your clients closer
