--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -23,7 +23,7 @@ html
     header.section-hero
       h1 Keep your team close  and your clients closer
       h4 Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
-      a.button href="http://beta.remoto.me" target="_blank" Start Free
+      a.button href="http://beta.remoto.me/auth/sign-up" target="_blank" Start Free
 
     / .cta-page
     /   .container
@@ -98,7 +98,7 @@ html
         p Yours,
         p.signature Fred Guth, Founder & CEO
         / p P.S.  If you want to talk, just reach me at <a href="http://beta.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
-      a.button href="http://beta.remoto.me" target="_blank" Start Free
+      a.button href="http://beta.remoto.me/auth/sign-up" target="_blank" Start Free
 
     / footer.section-footer
     /   .column
