First illustration iteration

--- a/src/style/components/_section-features.sass
+++ b/src/style/components/_section-features.sass
@@ -39,4 +39,4 @@
       &:nth-child(2):after
         background-image: url("../images/mockup-feature2.png")
       &:nth-child(3):after
-        background-image: url("../images/mockup-illustration.png")
+        background-image: url("../images/mockup-feature3.svg")
