🚧 Style .section-legal

--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -21,6 +21,7 @@
 @import 'components/section-pricing'
 @import 'components/section-letter'
 @import 'components/section-footer'
+@import 'components/section-legal'
 @import 'components/cta-page'
 
 // Elements
