📱 Make .section-legal width responsive

--- a/src/style/components/_section-letter.sass
+++ b/src/style/components/_section-letter.sass
@@ -1,4 +1,5 @@
 .section-legal
-  margin: 4rem 6rem
+  padding: calc(#{$space-xxs} + 8vw
+  margin: 4vw 8vw
   background: white
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.4)
