Add  no beta.remoto links

--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -15,7 +15,7 @@ html
 
     nav.navigation-menu
       a Remoto
-      a.link href="http://beta.remoto.me/auth/sign-in" target="_blank" Sign-in
+      a.link href="https://beta.remoto.me/auth/sign-in" target="_blank" Sign-in
       a.link href="#pricing" Pricing
       a.link href="#product" Product
 
@@ -23,13 +23,13 @@ html
     header.section-hero
       h1 Keep your team close  and your clients closer
       h4 Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
-      a.button href="http://beta.remoto.me/auth/sign-up" target="_blank" Start Free
+      a.button href="https://beta.remoto.me/auth/sign-up" target="_blank" Start Free
 
     / .cta-page
     /   .container
     /     h1 We are almost there...
     /     p Keep in mind we are still on “alpha” phase, so there may be some bugs and inconveniences.
-    /     a.button href="http://beta.remoto.me/auth/sign-up" Be Brave
+    /     a.button href="https://beta.remoto.me/auth/sign-up" Be Brave
     /     a.button.-cancel No, Thanks
     /     #close-cta Close
 
@@ -51,7 +51,7 @@ html
           h2.name Free
           h3.price $0
           p.note Yeeah! 🎉
-          a.button.-small href="http://beta.remoto.me/auth/sign-up" target="_blank" Start Free
+          a.button.-small href="https://beta.remoto.me/auth/sign-up" target="_blank" Start Free
           ul.features
             li Free Intra-company calls worldwide
             li 1 month message storage
@@ -97,8 +97,8 @@ html
         p Remoto is more than work tool, it is a way of thinking about work. Think outside the cubicle, be Remoto.
         p Yours,
         p.signature Fred Guth, Founder & CEO
-        / p P.S.  If you want to talk, just reach me at <a href="http://beta.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
-      a.button href="http://beta.remoto.me/auth/sign-up" target="_blank" Start Free
+        / p P.S.  If you want to talk, just reach me at <a href="https://beta.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
+      a.button href="https://beta.remoto.me/auth/sign-up" target="_blank" Start Free
 
     / footer.section-footer
     /   .column
