Add Privacy Policy content

--- a/src/view/terms-of-service.slim
+++ b/src/view/terms-of-service.slim
@@ -25,7 +25,6 @@ html
       p.-small Effective date: XXXXXX
       p Welcome to Remoto. Please read on to learn the rules and restrictions that govern your use of our services and applications. If you have any questions, comments, or concerns regarding these Terms and Policies, please contact us at support@remoto.me.
       p These Terms of Services (the “Terms”) are a binding contract between you and Remoto ("Remoto," "we" and "us"). You must agree to and accept all of the Terms, or you don’t have the right to use the Services. Your use of the Services in any way means that you agree to all of these Terms, and these Terms will remain in effect while you use the Services. These Terms include the provisions in this document, as well as those in the Privacy Policy and Copyright Dispute Policy.
-      
 
       h3 Rules
       
@@ -35,27 +34,22 @@ html
       h4 While You Are Here, You Must Follow the Rules
       p To help ensure a safe and productive work environment, all Authorized Users must comply with our Acceptable-Use-Policy and remain vigilant in reporting inappropriate behavior or content to User and us.
       
-
       h3 Modifications
       
       p As our business evolves, we may change these Terms or the Acceptable-Use-Policy. If we make a material change to the Terms or the Acceptable-Use-Policy , we will provide you with reasonable notice prior to the change taking effect either by emailing the email address associated with your account or by messaging you through the Services. You can review the most current version of the Terms at any time by visiting this page. Any material revisions to these Terms will become effective on the date set forth in our notice, and all other changes will become effective on the date we publish the change. If you use the Services after the effective date of any changes, that use will constitute your acceptance of the revised terms and conditions.
       
-
       h3 Waiver
       
       p No failure or delay by either party in exercising any right under the Terms, including the Acceptable-Use-Policy, will constitute a waiver of that right. No waiver under the Terms will be effective unless made in writing and signed by an authorized representative of the party being deemed to have granted the waiver.
       
-
       h3 Severability
       
       p The Terms, including the Acceptable-Use-Policy , will be enforced to the fullest extent permitted under applicable law. If any provision of the Terms is held by a court of competent jurisdiction to be contrary to law, the provision will be modified by the court and interpreted so as best to accomplish the objectives of the original provision to the fullest extent permitted by law, and the remaining provisions of the Terms will remain in effect.
       
-
       h3 Assignment
       
       p You may not assign any of your rights or delegate your obligations under these Terms, including the Acceptable-Use-Policy , whether by operation of law or otherwise, without the prior written consent of us (not to be unreasonably withheld). We may assign these Terms in their entirety (including all terms and conditions incorporated herein by reference), without your consent, to a corporate affiliate or in connection with a merger, acquisition, corporate reorganization, or sale of all or substantially all of our assets.
       
-
       h3 General
       
       p These Terms constitute the entire agreement between you and Remoto, and void and supersede any prior or contemporaneous agreements. They do not establish any rights for third party beneficiaries. Even though we do not require the fulfillment of certain terms that are not stated in this document, we retain the right to do so in the future. If a provision of these Terms is held by a court of competent jurisdiction to be void, the remaining provisions of the Terms will remain in full force and effect, and a valid term will replace the invalid term, reflecting our intentions as much as possible. The provisions of these Terms will be enforced to the fullest extent permitted by applicable law. If any provision is deemed unenforceable, where possible, it will be modified so as to make it enforceable, which may include its deletion. You shall not assign, sublease, or otherwise transfer any of your rights under these Terms. Any attempt to do so will be void. Runrun.it may transfer its rights to any of its affiliates, subsidiaries or successors.
@@ -64,10 +58,27 @@ html
       
 
       h2 Privacy Policy
+
+      h3 Information You Provide to Us
+
+      p We receive and store any information you knowingly provide to us. For example, through the registration process and/or through your account settings, we may collect Personal Information such as your name, email address and phone number.
+      p We may communicate with you if you’ve provided us the means to do so. For example, if you’ve given us your email address, we may email you about your use of the Services. Also, we may receive a confirmation when you open an email from us. This confirmation helps us make our communications with you more interesting and improve our services.
+
+      h3 Information Collected Automatically
+
+      p Whenever you interact with our Services, we automatically receive and record information on our server logs from your browser or device, which may include your IP address, device identification, “cookie” information, the type of browser and/or device you’re using to access our Services, and the page or feature you requested. “Cookies” are identifiers we transfer to your browser or device that allow us to recognize your browser or device and tell us how and when pages and features in our Services are visited and by how many people. You may be able to change the preferences on your browser or device to prevent or limit your device’s acceptance of cookies, but this may prevent you from taking advantage of some of our features.
+      p This Privacy Policy does not cover the use of cookies by any third parties, and we aren’t responsible for their privacy policies and practices.
+      p We may use this data to customize content for you that we think you might like, based on your usage patterns. We may also use it to improve the Services – for example, this data can tell us how often users use a particular feature of the Services, and we can use that knowledge to make the Services interesting to as many users as possible.
+
+      h3 Information Collected From Other Websites and Do Not Track Policy
+
+      p Through cookies we place on your browser or device, we may collect information about your online activity after you leave our Services. Just like any other usage information we collect, this information allows us to improve the Services and customize your online experience, and otherwise as described in this Privacy Policy. Your browser may offer you a “Do Not Track” option, which allows you to signal to operators of websites and web applications and services (including behavioral advertising services) that you do not wish such operators to track certain of your online activities over time and/or across different websites. Our Services do not support Do Not Track requests at this time, which means that we collect information about your online activity both while you are using the Services and after you leave our Services.
       
 
-      h3 Acceptable Use Policy
-      h4 Do:
+      h2 Acceptable Use Policy
+
+      h3 Do:
+
       ul
         li comply with all Terms-of-Service , including the terms of this Acceptable Use Policy;
         li comply with all applicable laws and governmental regulations, including, but not limited to, all intellectual property, data, privacy, and export control laws, and regulations promulgated by any government agencies;
@@ -76,7 +87,9 @@ html
         li keep passwords and all other login information confidential;
         li monitor and control all activity conducted through your account in connection with the Services; and
         li promptly notify us if you become aware of or reasonably suspect any illegal or unauthorized activity or a security breach involving your accounts or teams, including any loss, theft, or unauthorized disclosure or use of a username, password, or account.
-      h4 Don't:
+
+      h3 Don't:
+
       ul
         li permit any third party that is not an Authorized User to access or use a username or password for the Services;
         li share, transfer or otherwise provide access to an account designated for you to another person;
@@ -96,7 +109,8 @@ html
         li use the Services for consumer purposes, as Remoto is intended for use by businesses and organizations;
         li use contact or other user information obtained from the Services (including email addresses) to contact Authorized Users outside of the Services without their express permission or authority or to create or distribute mailing lists or other collections of contact or user profile information for Authorized Users for use outside of the Services; or
         li authorize, permit, enable, induce or encourage any third party to do any of the above.
-        Copyright
+
 
       h2 Contacting Remoto
+
       p Please also feel free to contact us if you have any questions about Remoto’s Terms of Service and Policies. You may contact us at support@remoto.me.
