🚧 Start footer structure

--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -100,26 +100,26 @@ html
         / p P.S.  If you want to talk, just reach me at <a href="https://beta.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
       a.button href="https://beta.remoto.me/auth/sign-up" target="_blank" Start Free
 
-    / footer.section-footer
-    /   .column
-    /     a Remoto
-    /     a Blog
-    /     a Facebook
-    /     a Linkedin
-    /   .column
-    /     h4 Remoto
-    /     a Features
-    /     a Pricing
-    /   .column
-    /     h4 Download
-    /     a Desktop App
-    /     a Mobile App
-    /   .column
-    /     h4 Support
-    /     a 800-736-6860
-    /     a hi@remoto.me
-    /     a href="terms-of-service.html" target="_blank" Terms of Service
-    /     a href="terms-of-service.html" target="_blank" Privacy
+    footer.section-footer
+      .column
+        a href="#" Remoto
+        a href="#" Blog
+        a href="#" Facebook
+        a href="#" Linkedin
+      .column
+        h4 Remoto
+        a href="#" Features
+        a href="#" Pricing
+      .column
+        h4 Download
+        a href="#" Desktop App
+        a href="#" Mobile App
+      .column
+        h4 Support
+        a href="#" 800-736-6860
+        a mailto="hi@remoto.me" hi@remoto.me
+        a href="terms-of-service.html" target="_blank" Terms of Service
+        a href="terms-of-service.html" target="_blank" Privacy
 
 
     script src="js/scripts.js"
