--- a/src/style/components/_section-footer.sass
+++ b/src/style/components/_section-footer.sass
@@ -1,15 +1,13 @@
 .section-footer
   background-color: #fff
-  display: flex
   box-shadow: 0 0 64px rgba(#000, 0.2)
-  flex-wrap: wrap
-  justify-content: space-between
+  display: grid
+  grid-template-columns: 1fr 1fr
+  +medium-up
+    grid-template-columns: 1fr 1fr 1fr 1fr
 
   > .column
-    width: 25%
-    min-width: $space-xl
     padding-right: $space-s
     padding-left: $space-s
-    flex-grow: 1
     > *
       display: block
