--- a/style/style.css
+++ b/style/style.css
@@ -435,18 +435,20 @@ body > footer {
 
 .section-footer {
   background-color: #fff;
-  display: flex;
   box-shadow: 0 0 64px rgba(0, 0, 0, 0.2);
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+@media (min-width: 961px) {
+  .section-footer {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
 
 .section-footer > .column {
-  width: 25%;
-  min-width: 8rem;
   padding-right: 1.5rem;
   padding-left: 1.5rem;
-  flex-grow: 1;
 }
 
 .section-footer > .column > * {
