--- a/src/style/components/_section-letter.sass
+++ b/src/style/components/_section-letter.sass
@@ -1,5 +1,116 @@
-.section-legal
-  padding: calc(#{$space-xxs} + 8vw
-  margin: 4vw 8vw
-  background: white
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.4)
+.section-letter
+  background-color: $color-darksaphire
+  position: relative
+  overflow: hidden
+  z-index: 1
+  padding-top: $space-xxl + $space-xxl
+  background-image: url("../images/pattern-dark.svg")
+  background-repeat: repeat
+  background-position: center center
+  background-size: calc(#{$space-xxl} + 140vw) auto
+  +medium-up
+    background-size: calc(#{$space-xxl} + 120vw) auto
+  +large-up
+    background-size: calc(#{$space-xxl} + 100vw) auto
+
+  .-bold
+    font-weight: 700
+
+  .-strike
+    text-decoration: line-through
+
+  &:after
+    content: ''
+    position: absolute
+    top: 0
+    right: 0
+    left: 0
+    height: $space-xxl + $space-xxl
+    background-image: linear-gradient($color-darksaphire, transparent)
+    pointer-events: none
+    z-index: 3
+
+  > .button
+    position: fixed
+    z-index: 2
+    bottom: calc(#{$space-s} + 2vw)
+    left: 50%
+    transform: translateX(-50%)
+
+  > .letter
+    margin-right: auto
+    margin-left: auto
+    width: calc(#{$space-xl} + 60%)
+    padding-bottom: $space-l
+    border-radius: 2px
+    background-color: #fff
+    padding: 6vw
+    box-shadow: 0 4px 16px rgba(#000, 0.2)
+    font-family: $font-family-serif
+
+    +medium-up
+      max-width: 960px
+      padding-bottom: $space-xl
+
+    > h1
+      font-weight: 400
+      color: $color-saphire
+
+    > .signature,
+    > p:last-child
+      text-align: center
+
+    > .signature
+      &:before
+        content: ''
+        display: block
+        margin-right: auto
+        margin-left: auto
+        margin-bottom: calc(-1vw - #{$space-xxs})
+        height: calc(24px + 3vw)
+        width: calc(96px + 12vw)
+        background-image: url("../images/signature.svg")
+        background-size: 100%
+        background-repeat: no-repeat
+        background-position: center
+
+    > p:last-child
+      color: rgba(#000, 0.4)
+      > a
+        +smart-underline
+        &,
+        &:visited
+          color: $color-topaz
+        &:hover,
+        &:focus,
+        &:active
+          color: mix(#000, $color-topaz, 10%)
+
+  > .envelope
+    &:after,
+    &:before
+      content: ''
+      display: block
+      width: calc(#{$space-xl} + 56vw)
+      max-width: 100%
+      position: fixed
+      left: 50%
+      top: 0
+      bottom: calc(-4vw - #{$space-m})
+      transform: translateX(-50%)
+      background-size: 100% auto
+      background-position: center bottom
+      background-repeat: no-repeat
+      pointer-events: none
+
+      +medium-up
+        max-width: 1024px
+
+      +huge-up
+        bottom: calc(-#{$space-m})
+
+    &:after
+      background-image: url("../images/letter-front.png")
+    &:before
+      background-image: url("../images/letter-back.png")
+      z-index: -1
