--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -14,7 +14,7 @@ html
   body
 
     nav.navigation-menu
-      a Remoto
+      a.logo Remoto
       a.link href="https://beta.remoto.me/auth/sign-in" target="_blank" Sign-in
       a.link href="#pricing" Pricing
       a.link href="#product" Product
@@ -102,24 +102,24 @@ html
 
     footer.section-footer
       .column
-        a href="#" Remoto
-        a href="#" Blog
-        a href="#" Facebook
-        a href="#" Linkedin
+        h4.logo Remoto
+        / a href="#" Blog
+        / a href="#" Facebook
+        / a href="#" Linkedin
       .column
-        h4 Remoto
+        h4 About Remoto
         a href="#" Features
         a href="#" Pricing
       .column
-        h4 Download
-        a href="#" Desktop App
-        a href="#" Mobile App
+        h4 Download Links
+        a href="#" Windows App
+        a href="#" macOS App
+        a href="#" Linux App
       .column
         h4 Support
-        a href="#" 800-736-6860
+        / a href="#" 800-736-6860
         a mailto="hi@remoto.me" hi@remoto.me
-        a href="terms-of-service.html" target="_blank" Terms of Service
-        a href="terms-of-service.html" target="_blank" Privacy
+        a href="terms-of-service.html" target="_blank" Terms & Policies
 
 
     script src="js/scripts.js"
