--- a/src/style/components/_navigation-menu.sass
+++ b/src/style/components/_navigation-menu.sass
@@ -25,12 +25,10 @@
       font-size: $font-size-centi
 
     &:first-child
+      @extend .logo
       float: left
       margin-left: 0
       margin-right: calc(#{$space-xxs} + 2vw)
-      text-transform: uppercase
-      letter-spacing: 0.1em
-      font-family: $font-family-headings
       transition transform 0.4s ease
       transform-origin: 0 50%
       transform: scale(1.25) translateY(-50%)
