Link some footer links

--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -17,7 +17,7 @@ html
       a.logo Remoto
       a.link href="https://beta.remoto.me/auth/sign-in" target="_blank" Sign-in
       a.link href="#pricing" Pricing
-      a.link href="#product" Product
+      a.link href="#features" Features
 
 
     header.section-hero
@@ -33,7 +33,7 @@ html
     /     a.button.-cancel No, Thanks
     /     #close-cta Close
 
-    section#product.section-features
+    section#features.section-features
       .feature
         h2 Your team on the same page
         p Great customer communication relies on internal coordination. With Remoto, your team shares a common view of all customer interactions and stays always in sync.
@@ -108,8 +108,9 @@ html
         / a href="#" Linkedin
       .column
         h4 About Remoto
-        a href="#" Features
-        a href="#" Pricing
+        a href="#features" Features
+        a href="#pricing" Pricing
+        a href="https://beta.remoto.me/auth/sign-in" target="_blank" Sign-in
       .column
         h4 Download Links
         a href="#" Windows App
