Add og:description metatah

--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -9,6 +9,7 @@ html
     meta name="keywords" content="Communication, VoIP, PBX, Team"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     meta property="og:title" content="Remoto"
+    meta property="og:description" content="Remoto is an enjoyable and productive solution for sales and support teams communicate with customers"
     meta property="og:type" content="website"
     meta property="og:url" content="http://remoto.me/"
     meta property="og:image" content="./images/og-image.png"
