Add download links

--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -113,13 +113,13 @@ html
         a href="https://beta.remoto.me/auth/sign-in" target="_blank" Sign-in
       .column
         h4 Download Links
-        a href="#" Windows App
-        a href="#" macOS App
-        a href="#" Linux App
+        a href="https://s3.amazonaws.com/remoto-releases/squirrel.windows/x64/Remoto-1.1.54+Setup.exe" Windows App
+        a href="https://s3.amazonaws.com/remoto-releases/Remoto-1.1.53.dmg" macOS App
+        a href="https://s3.amazonaws.com/remoto-releases/Remoto_1.1.54_amd64.deb" Linux App
       .column
         h4 Support
         / a href="#" 800-736-6860
-        a mailto="hi@remoto.me" hi@remoto.me
+        / a mailto="hi@remoto.me" hi@remoto.me
         a href="terms-of-service.html" target="_blank" Terms & Policies
 
 
