Add google conversion code

--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -27,7 +27,7 @@ html
     header.section-hero
       h1 Keep your team close  and your clients closer
       h4 Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
-      a.button href="https://beta.remoto.me/auth/sign-up" target="_blank" Start Free
+      a.button onclick="goog_report_conversion ('https://beta.remoto.me/auth/sign-up')" href="https://beta.remoto.me/auth/sign-up" target="_blank" Start Free
 
     / .cta-page
     /   .container
@@ -55,7 +55,7 @@ html
           h2.name Free
           h3.price $0
           p.note Yeeah! 🎉
-          a.button.-small href="https://beta.remoto.me/auth/sign-up" target="_blank" Start Free
+          a.button.-small onclick="goog_report_conversion ('https://beta.remoto.me/auth/sign-up')" href="https://beta.remoto.me/auth/sign-up" target="_blank" Start Free
           ul.features
             li Free Intra-company calls worldwide
             li 1 month message storage
@@ -102,7 +102,7 @@ html
         p Yours,
         p.signature Fred Guth, Founder & CEO
         / p P.S.  If you want to talk, just reach me at <a href="https://beta.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
-      a.button href="https://beta.remoto.me/auth/sign-up" target="_blank" Start Free
+      a.button onclick="goog_report_conversion ('https://beta.remoto.me/auth/sign-up')" href="https://beta.remoto.me/auth/sign-up" target="_blank" Start Free
       
     footer.section-footer
       .column
@@ -128,3 +128,26 @@ html
 
     link href="./style/style.css" rel="stylesheet" type='text/css'
     script src="js/scripts.js"
+
+    javascript:
+      goog_snippet_vars = function() {
+          var w = window;
+          w.google_conversion_id = 943895741;
+          w.google_conversion_label = "xdO5CO7RkXMQvemKwgM";
+          w.google_remarketing_only = false;
+        }
+        goog_report_conversion = function(url) {
+          goog_snippet_vars();
+          window.google_conversion_format = "3";
+          var opt = new Object();
+          opt.onload_callback = function() {
+          if (typeof(url) != 'undefined') {
+            window.location = url;
+          }
+        }
+        var conv_handler = window['google_trackConversion'];
+        if (typeof(conv_handler) == 'function') {
+          conv_handler(opt);
+        }
+      }
+    script src="//www.googleadservices.com/pagead/conversion_async.js" type="text/javascript" 
