--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -4,12 +4,12 @@ html
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
     title Remoto
-    meta name="description" content="Keep your team close and your clients closer. Remoto is an enjoyable and productive solution for sales and support teams communicate with customers."
+    meta name="description" content="Your team on the same page. Remoto is an enjoyable and productive solution for sales and support teams communicate with customers."
     meta name="author" content=""
     meta name="keywords" content="Communication, VoIP, PBX, Team, Support, Sales"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    meta property="og:title" content="Remoto"
-    meta property="og:description" content="Keep your team close and your clients closer. Remoto is an enjoyable and productive solution for sales and support teams communicate with customers."
+    meta property="og:title" content="Remoto: Your team close and your clients closer"
+    meta property="og:description" content="Your team on the same page. Remoto is an enjoyable and productive solution for sales and support teams communicate with customers."
     meta property="og:type" content="website"
     meta property="og:url" content="http://remoto.me/"
     meta property="og:image" content="./images/og-image2.png"
