Update open graph title

--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -8,7 +8,7 @@ html
     meta name="author" content=""
     meta name="keywords" content="Communication, VoIP, PBX, Team, Support, Sales"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    meta property="og:title" content="Remoto: Your team close and your clients closer"
+    meta property="og:title" content="Remoto: Your Team Close and Your Clients Closer"
     meta property="og:description" content="Your team on the same page. Remoto is an enjoyable and productive solution for sales and support teams communicate with customers."
     meta property="og:type" content="website"
     meta property="og:url" content="http://remoto.me/"
