Adjust hero positioning

--- a/src/style/components/_navigation-menu.sass
+++ b/src/style/components/_navigation-menu.sass
@@ -7,7 +7,7 @@
   color: #fff
   z-index: 3
   transition: all 0.4s linear
-  height: $space-xxl
+  height: 12rem
   background-color: transparent
   +small-only
     padding-right: calc(#{$space-xxs} + 6vw)
