--- a/src/style/components/_section-hero.sass
+++ b/src/style/components/_section-hero.sass
@@ -1,5 +1,5 @@
 .section-hero
-  padding-top: $space-xxl
+  padding-top: 12rem
   padding-bottom: $space-xxl
   color: #fff
   background-color: $color-saphire
@@ -19,7 +19,7 @@
       // transform: translateY(-50%)
       // background-color: #f00
       background-image: url("../images/mockup-hero.png")
-      background-position: center $space-xxl
+      background-position: center 12rem
       background-size: contain
       background-repeat: no-repeat
       left: 0
